[gd_scene load_steps=5 format=3 uid="uid://bk8vh7m3qp1nx"]

[ext_resource type="Script" path="res://Scripts/UI/GameUI.gd" id="1_gameui"]
[ext_resource type="Script" path="res://Scripts/UI/MarketPanel.gd" id="2_marketpanel"]
[ext_resource type="Script" path="res://Scripts/UI/HeroHallPanel.gd" id="3_herohallpanel"]
[ext_resource type="Script" path="res://Scripts/UI/TowerSpecializationPanel.gd" id="4_specpanel"]

[node name="GameUI" type="CanvasLayer"]
script = ExtResource("1_gameui")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="TopBar" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/TopBar"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/TopBar/VBoxContainer"]
layout_mode = 2

[node name="GoldLabel" type="Label" parent="MarginContainer/TopBar/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Or: 50 (+0/s)"

[node name="WoodLabel" type="Label" parent="MarginContainer/TopBar/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Bois: 30 (+0/s)"

[node name="StoneLabel" type="Label" parent="MarginContainer/TopBar/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Pierre: 20 (+0/s)"

[node name="WaveLabel" type="Label" parent="MarginContainer/TopBar/VBoxContainer"]
layout_mode = 2
text = "Vague 0"
horizontal_alignment = 1

[node name="WaveTimerLabel" type="Label" parent="MarginContainer/TopBar/VBoxContainer"]
layout_mode = 2
text = "Prochaine vague: 03:00"
horizontal_alignment = 1

[node name="CastleHPBar" type="ProgressBar" parent="MarginContainer/TopBar/VBoxContainer"]
layout_mode = 2
max_value = 1000.0
value = 1000.0
show_percentage = false

[node name="BuildPanel" type="PanelContainer" parent="."]
offset_left = 10.0
offset_top = 150.0
offset_right = 160.0
offset_bottom = 350.0

[node name="VBoxContainer" type="VBoxContainer" parent="BuildPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="BuildPanel/VBoxContainer"]
layout_mode = 2
text = "Construction"
horizontal_alignment = 1

[node name="MineButton" type="Button" parent="BuildPanel/VBoxContainer"]
layout_mode = 2
text = "Mine
50 Or, 20 Bois"

[node name="SawmillButton" type="Button" parent="BuildPanel/VBoxContainer"]
layout_mode = 2
text = "Scierie
40 Or, 30 Bois"

[node name="MarketButton" type="Button" parent="BuildPanel/VBoxContainer"]
layout_mode = 2
text = "Marché
80 Or, 40 Bois"

[node name="TowerButton" type="Button" parent="BuildPanel/VBoxContainer"]
layout_mode = 2
text = "Tour
100 Or, 50 Bois, 20 Pierre"

[node name="HeroHallButton" type="Button" parent="BuildPanel/VBoxContainer"]
layout_mode = 2
text = "Caserne Héros
200 Or, 100 Bois, 50 Pierre"

[node name="InfoPanel" type="PanelContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -60.0
offset_right = 150.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0

[node name="InfoLabel" type="Label" parent="InfoPanel"]
layout_mode = 2
text = ""
horizontal_alignment = 1
vertical_alignment = 1

[node name="BottomRightPanel" type="PanelContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -180.0
offset_right = 180.0
offset_bottom = -10.0
grow_horizontal = 1
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="BottomRightPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="BottomRightPanel/VBoxContainer"]
layout_mode = 2
text = "Actions"
horizontal_alignment = 1

[node name="ExpandButton" type="Button" parent="BottomRightPanel/VBoxContainer"]
layout_mode = 2
text = "Étendre territoire
100 Or, 50 Bois"

[node name="UpgradeButton" type="Button" parent="BottomRightPanel/VBoxContainer"]
layout_mode = 2
text = "Améliorations"
disabled = true

[node name="SkillTreeButton" type="Button" parent="BottomRightPanel/VBoxContainer"]
layout_mode = 2
text = "Arbre de talents"
disabled = true

[node name="PrestigeButton" type="Button" parent="BottomRightPanel/VBoxContainer"]
layout_mode = 2
text = "Prestige"
disabled = true

[node name="UpgradePanel" type="PanelContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UpgradePanel"]
layout_mode = 2

[node name="Title" type="Label" parent="UpgradePanel/VBoxContainer"]
layout_mode = 2
text = "Bâtiment sélectionné"
horizontal_alignment = 1

[node name="InfoLabel" type="Label" parent="UpgradePanel/VBoxContainer"]
layout_mode = 2
text = "Mine (Niv. 1)
Production: 1.0/s"
horizontal_alignment = 1

[node name="UpgradeButton" type="Button" parent="UpgradePanel/VBoxContainer"]
layout_mode = 2
text = "Améliorer (50 Or, 30 Bois)"

[node name="CloseButton" type="Button" parent="UpgradePanel/VBoxContainer"]
layout_mode = 2
text = "Fermer"

[node name="MarketPanel" type="PanelContainer" parent="."]
visible = false
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -420.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("2_marketpanel")

[node name="VBoxContainer" type="VBoxContainer" parent="MarketPanel"]
layout_mode = 2

[node name="Title" type="Label" parent="MarketPanel/VBoxContainer"]
layout_mode = 2
text = "Marché"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarketPanel/VBoxContainer"]
layout_mode = 2

[node name="SellTitle" type="Label" parent="MarketPanel/VBoxContainer"]
layout_mode = 2
text = "--- Vendre ---"
horizontal_alignment = 1

[node name="WoodSellRow" type="HBoxContainer" parent="MarketPanel/VBoxContainer"]
layout_mode = 2

[node name="WoodLabel" type="Label" parent="MarketPanel/VBoxContainer/WoodSellRow"]
layout_mode = 2
custom_minimum_size = Vector2(50, 0)
text = "Bois:"

[node name="MinusButton" type="Button" parent="MarketPanel/VBoxContainer/WoodSellRow"]
layout_mode = 2
text = "-"

[node name="AmountLabel" type="Label" parent="MarketPanel/VBoxContainer/WoodSellRow"]
layout_mode = 2
custom_minimum_size = Vector2(40, 0)
text = "10"
horizontal_alignment = 1

[node name="PlusButton" type="Button" parent="MarketPanel/VBoxContainer/WoodSellRow"]
layout_mode = 2
text = "+"

[node name="PriceLabel" type="Label" parent="MarketPanel/VBoxContainer/WoodSellRow"]
layout_mode = 2
custom_minimum_size = Vector2(60, 0)
text = "+20 Or"
horizontal_alignment = 2

[node name="SellButton" type="Button" parent="MarketPanel/VBoxContainer/WoodSellRow"]
layout_mode = 2
text = "Vendre"

[node name="StoneSellRow" type="HBoxContainer" parent="MarketPanel/VBoxContainer"]
layout_mode = 2

[node name="StoneLabel" type="Label" parent="MarketPanel/VBoxContainer/StoneSellRow"]
layout_mode = 2
custom_minimum_size = Vector2(50, 0)
text = "Pierre:"

[node name="MinusButton" type="Button" parent="MarketPanel/VBoxContainer/StoneSellRow"]
layout_mode = 2
text = "-"

[node name="AmountLabel" type="Label" parent="MarketPanel/VBoxContainer/StoneSellRow"]
layout_mode = 2
custom_minimum_size = Vector2(40, 0)
text = "10"
horizontal_alignment = 1

[node name="PlusButton" type="Button" parent="MarketPanel/VBoxContainer/StoneSellRow"]
layout_mode = 2
text = "+"

[node name="PriceLabel" type="Label" parent="MarketPanel/VBoxContainer/StoneSellRow"]
layout_mode = 2
custom_minimum_size = Vector2(60, 0)
text = "+30 Or"
horizontal_alignment = 2

[node name="SellButton" type="Button" parent="MarketPanel/VBoxContainer/StoneSellRow"]
layout_mode = 2
text = "Vendre"

[node name="HSeparator2" type="HSeparator" parent="MarketPanel/VBoxContainer"]
layout_mode = 2

[node name="BuyTitle" type="Label" parent="MarketPanel/VBoxContainer"]
layout_mode = 2
text = "--- Acheter ---"
horizontal_alignment = 1

[node name="WoodBuyRow" type="HBoxContainer" parent="MarketPanel/VBoxContainer"]
layout_mode = 2

[node name="WoodLabel" type="Label" parent="MarketPanel/VBoxContainer/WoodBuyRow"]
layout_mode = 2
custom_minimum_size = Vector2(50, 0)
text = "Bois:"

[node name="MinusButton" type="Button" parent="MarketPanel/VBoxContainer/WoodBuyRow"]
layout_mode = 2
text = "-"

[node name="AmountLabel" type="Label" parent="MarketPanel/VBoxContainer/WoodBuyRow"]
layout_mode = 2
custom_minimum_size = Vector2(40, 0)
text = "10"
horizontal_alignment = 1

[node name="PlusButton" type="Button" parent="MarketPanel/VBoxContainer/WoodBuyRow"]
layout_mode = 2
text = "+"

[node name="PriceLabel" type="Label" parent="MarketPanel/VBoxContainer/WoodBuyRow"]
layout_mode = 2
custom_minimum_size = Vector2(60, 0)
text = "-40 Or"
horizontal_alignment = 2

[node name="BuyButton" type="Button" parent="MarketPanel/VBoxContainer/WoodBuyRow"]
layout_mode = 2
text = "Acheter"

[node name="StoneBuyRow" type="HBoxContainer" parent="MarketPanel/VBoxContainer"]
layout_mode = 2

[node name="StoneLabel" type="Label" parent="MarketPanel/VBoxContainer/StoneBuyRow"]
layout_mode = 2
custom_minimum_size = Vector2(50, 0)
text = "Pierre:"

[node name="MinusButton" type="Button" parent="MarketPanel/VBoxContainer/StoneBuyRow"]
layout_mode = 2
text = "-"

[node name="AmountLabel" type="Label" parent="MarketPanel/VBoxContainer/StoneBuyRow"]
layout_mode = 2
custom_minimum_size = Vector2(40, 0)
text = "10"
horizontal_alignment = 1

[node name="PlusButton" type="Button" parent="MarketPanel/VBoxContainer/StoneBuyRow"]
layout_mode = 2
text = "+"

[node name="PriceLabel" type="Label" parent="MarketPanel/VBoxContainer/StoneBuyRow"]
layout_mode = 2
custom_minimum_size = Vector2(60, 0)
text = "-60 Or"
horizontal_alignment = 2

[node name="BuyButton" type="Button" parent="MarketPanel/VBoxContainer/StoneBuyRow"]
layout_mode = 2
text = "Acheter"

[node name="HSeparator3" type="HSeparator" parent="MarketPanel/VBoxContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="MarketPanel/VBoxContainer"]
layout_mode = 2
text = "Fermer"

[node name="HeroHallPanel" type="PanelContainer" parent="."]
visible = false
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -280.0
offset_top = -320.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("3_herohallpanel")

[node name="VBoxContainer" type="VBoxContainer" parent="HeroHallPanel"]
layout_mode = 2

[node name="Title" type="Label" parent="HeroHallPanel/VBoxContainer"]
layout_mode = 2
text = "Caserne de Héros"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="HeroHallPanel/VBoxContainer"]
layout_mode = 2

[node name="InfoLabel" type="Label" parent="HeroHallPanel/VBoxContainer"]
layout_mode = 2
text = "Aucun héros actif"
horizontal_alignment = 1

[node name="BuyButton" type="Button" parent="HeroHallPanel/VBoxContainer"]
layout_mode = 2
text = "Acheter Paladin"

[node name="UpgradeButton" type="Button" parent="HeroHallPanel/VBoxContainer"]
layout_mode = 2
text = "Améliorer"

[node name="HSeparator2" type="HSeparator" parent="HeroHallPanel/VBoxContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="HeroHallPanel/VBoxContainer"]
layout_mode = 2
text = "Fermer"

[node name="TowerSpecializationPanel" type="PanelContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -120.0
offset_right = 150.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_specpanel")

[node name="VBoxContainer" type="VBoxContainer" parent="TowerSpecializationPanel"]
layout_mode = 2

[node name="Title" type="Label" parent="TowerSpecializationPanel/VBoxContainer"]
layout_mode = 2
text = "Spécialisation de Tour"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="TowerSpecializationPanel/VBoxContainer"]
layout_mode = 2

[node name="InfoLabel" type="Label" parent="TowerSpecializationPanel/VBoxContainer"]
layout_mode = 2
text = "Choisissez une spécialisation"
horizontal_alignment = 1

[node name="FireButton" type="Button" parent="TowerSpecializationPanel/VBoxContainer"]
layout_mode = 2
text = "Tour de Feu
Dégâts de zone + Brûlure"

[node name="IceButton" type="Button" parent="TowerSpecializationPanel/VBoxContainer"]
layout_mode = 2
text = "Tour de Glace
Ralentit les ennemis"

[node name="PoisonButton" type="Button" parent="TowerSpecializationPanel/VBoxContainer"]
layout_mode = 2
text = "Tour Poison
Dégâts sur la durée"

[node name="HSeparator2" type="HSeparator" parent="TowerSpecializationPanel/VBoxContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="TowerSpecializationPanel/VBoxContainer"]
layout_mode = 2
text = "Annuler"
